Update 'nocab0r2b-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe:b8c654b7b6e3995ef31102574c6c20ba83f7118f@sha256:e6b4f52e4ab77ddab0f89618aac3830929adcbdfbaa3da102c5b0eb4e3801f97

--- a/components/nocab0r2b-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/nocab0r2b-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: nocab0r2b-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:b8c654b7b6e3995ef31102574c6c20ba83f7118f@sha256:e6b4f52e4ab77ddab0f89618aac3830929adcbdfbaa3da102c5b0eb4e3801f97
+          name: container-image
